open modules for core tests